# yugen

./: .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  resize_app_icon.py  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: music.json
src-tauri/src/: http.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: get_music_bytes.rs  mod.rs  request_music_async.rs
src/assets/: main.css
src/assets/css/: global.css
src/components/: AudioPlayer.vue  SilentAudio.vue
src/constants/: index.ts
src/models/: ConfObject.ts
src/store/: player_conf.ts  player_state.ts
src/utils/: utils.ts
src/views/: MainContentPage.vue  SettingsPage.vue
