[package]
name = "yugen"
version = "1.0.2"
description = "Ambience Player with Minecraft music"
authors = ["Ect07 <ect@vivaldi.net>"]
edition = "2021"

[lib]
name = "yugen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
reqwest = "0.13"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
